# nes-emulator

./: .gitignore  CMakeLists.txt  readme.MD
src/: CMakeLists.txt  bus.cpp  bus.h  main.cpp  memory.cpp  memory.h  readme.MD  rom.cpp  system.h
src/cpu/: addressing_mode.cpp  cpu.cpp  cpu.h  execution_data.h
src/ppu/: address_register.cpp  data_register.cpp  ppu.h
test/: CMakeLists.txt  cpu_adc_twos_complement_test.cpp  cpu_addressing_mode_test.cpp  cpu_instructions_test.cpp  cpu_twos_complement_test.cpp  cputest.cpp  memory_test.cpp  memorytest.cpp  ppu_register_test.cpp
test/roms/: 01-expected-log.txt  compare-test-rom.sh
